--- a/XamathonProject/XamathonProject/XamathonProject.csproj
+++ b/XamathonProject/XamathonProject/XamathonProject.csproj
@@ -42,6 +42,9 @@
     </Compile>
     <Compile Include="EmailService.cs" />
     <Compile Include="IAudio.cs" />
+    <Compile Include="LogIn.xaml.cs">
+      <DependentUpon>LogIn.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -97,10 +100,17 @@
   <ItemGroup>
     <Content Include="background.jpg" />
     <Content Include="christmas_texture2632.jpg" />
+    <Content Include="login.jpg" />
     <Content Include="sound.mp3" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="SendLetter.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="LogIn.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
